# EasyLabeler

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  config.py  keybinds.py  main.py  pyproject.toml  requirements.txt  requirements_simplified.txt  run.py  state.py  utils.py
.github/workflows/: lint.yml
core/: keybinds.py  state.py
data/new/test/: annotations.json
tests/: test_frame_manipulation.py  test_state.py  test_utils.py
utils/: classes.py  classes_yoloworld.py  detection.py
views/: controls.py  frame_manipulation.py  image_viewer.py  recorder.py  video_list.py  yolos.py
