[project]
name = "easylabeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appnope>=0.1.4",
    "asttokens>=3.0.0",
    "clip>=0.2.0",
    "comm>=0.2.2",
    "debugpy>=1.8.13",
    "decorator>=5.2.1",
    "exceptiongroup>=1.2.2",
    "executing>=2.2.0",
    "importlib-metadata>=8.6.1",
    "inference[gaze,grounding-dino,sam]>=0.30.0",
    "iniconfig>=2.1.0",
    "ipykernel>=6.29.5",
    "ipython>=8.34.0",
    "jedi>=0.19.2",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "matplotlib-inline>=0.1.7",
    "nest-asyncio>=1.6.0",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "packaging>=24.2",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "platformdirs>=4.3.7",
    "pluggy>=1.5.0",
    "prompt-toolkit>=3.0.50",
    "psutil>=7.0.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pygments>=2.19.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.16",
    "pyqt5-sip>=12.17.0",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "pyzmq>=26.3.0",
    "six>=1.17.0",
    "stack-data>=0.6.3",
    "supervision>=0.22.0",
    "tomli>=2.2.1",
    "torch>=2.3.1",
    "tornado>=6.4.2",
    "traitlets>=5.14.3",
    "transformers>=4.42.2",
    "typing-extensions>=4.12.2",
    "ultralytics>=8.3.99",
    "wcwidth>=0.2.13",
    "zipp>=3.21.0",
]
